# pnp_hybrid

./: CMakeLists.txt  README.md
debug_files/: intrinsic_iphone12.csv
matlab/: zeroR.m
matlab/ASPnP_Toolbox/: ReadMe.txt  demo_bookcover.m  demo_box.m  main_6pt_ordinary_3d.m  main_6pt_planar.m  main_6pt_quasi_singular.m  main_ordinary_3d.m  main_planar.m  main_quasi_singular.m  main_time.m
matlab/ASPnP_Toolbox/data/: model_bookcover.mat  model_box.mat  tmp.pgm
matlab/ASPnP_Toolbox/dls/: dls_pnp.m  robust_dls_pnp.m
matlab/F_BnB/: EvaluateSampsonError.m  FundamentalMatrix_Sampson_Bilinear_SeDuMi_ScaleUP.m  FundamentalMatrix_Sampson_Trilinear_SeDuMi_ScaleUP.m  TrilinearEnvelopeEngine.m  fundmatrix_n8p.m
matlab/GPnPf-Toolbox/: CalculateAngleTranslation.m  CalculateCoefficient_f3t4_Transt_1_Mex.c  CalculateCoefficient_f3t4_Transt_1_Mex.mexw64  GPnP_f.m  GPnP_f_GN.m  How to use.txt  RANSAC_GP4Pf.m  RPnP_f_Test.m  RPnP_f_Test_AT.m  RPnP_interface.m  RefineDampedNewton.m  SolveCubic_Real_Mex.c  SolveCubic_Real_Mex.mexw64  SolvePolynomial_Sturm_Mex.mexw64  Solvef_f3t4_Transt_1_Mex.c  Solvef_f3t4_Transt_1_Mex.mexw64  main_pnpf_noise_near_planar.m  main_pnpf_noise_ordinary_3d.m  main_pnpf_ransac_4point_0.m  main_pnpf_ransac_4point_1.m  main_pnpf_ransac_4point_2.m  main_pnpf_sensitivity_4point.m  main_pnpf_sensitivity_4point_sota.m  main_pnpf_sensitivity_npoint.m  main_pnpf_time.m  main_pnpf_xpt_ordinary_3d.m  main_pnpf_xpt_planar.m
matlab/GPnPf-Toolbox/DLT/: CalibNormDLT.m  DLT.m  DecompPMat.m  HOMO.m  HomoNormDLT.m  RefineCamParam.m
matlab/GPnPf-Toolbox/UPnP/: main.m  upnp_GN_interface.m  upnp_interface.m
matlab/GPnPf-Toolbox/p4pf-top/: Best_Distance_GB.m  Best_Ratio_GB.m  Best_Ratio_HVR.m
matlab/OPnP_Toolbox_Original/: How to use.txt  Solver_Stability.m  demo_bookcover.m  demo_box.m  get_data.m  main_noise_ordinary_3d.m  main_noise_planar.m  main_noise_quasi_singular.m  main_p3p.m  main_time.m  main_xpt_ordinary_3d.m  main_xpt_planar.m  main_xpt_quasi_singular.m  save_results.m  save_results_R.m  test.m  test_3d_2d_pts.m  test_with_real_data.m
result/feats_tracker_results/: rot_pitch_1  rot_pitch_10  rot_pitch_100  rot_pitch_11  rot_pitch_12  rot_pitch_13  rot_pitch_14  rot_pitch_15  rot_pitch_16  rot_pitch_17  rot_pitch_18  rot_pitch_19  rot_pitch_2  rot_pitch_20  rot_pitch_21  rot_pitch_22  rot_pitch_23  rot_pitch_24  rot_pitch_25  rot_pitch_26  rot_pitch_27  rot_pitch_28  rot_pitch_29  rot_pitch_3  rot_pitch_30  rot_pitch_31  rot_pitch_32  rot_pitch_33  rot_pitch_34  rot_pitch_35  rot_pitch_36  rot_pitch_37  rot_pitch_38  rot_pitch_39  rot_pitch_4  rot_pitch_40  rot_pitch_41  rot_pitch_42  rot_pitch_43  rot_pitch_44  (+460 more)
result/iphone_data_comp/: plot_rot_pitch.m  rot_pitch_12_hybrid.txt  rot_pitch_15.txt  rot_pitch_15_hybrid.txt  rot_pitch_3.txt  rot_pitch_3_hybrid.txt  rot_pitch_6_hybrid.txt  rot_pitch_9_hybrid.txt
result/plot/: plot_pnp_result_rotation.m  plot_pnp_result_translation.m  plot_reproject_err.m  reprojection_err.fig  rotation_plot.fig  rotation_plot_all.fig  translation.fig  translation_all.fig  translation_plot.fig
result/pnp_comp/: compare_pnps.docx  plot_noise.m  plot_pitch.m  plot_pts.m
result/pnp_comp_more/: PT_NOISE_10_MAT.txt  plot_PT_NOISE.m
src/: CMakeLists.txt  experiment_helpers.cpp  main.cpp  main_feature_track.cpp  main_monte_carlo.cpp  main_mt_noise.cpp  main_mt_points.cpp  main_mt_points_iphone.cpp  main_opengv_pnp.cpp  main_opt.cpp  main_pnp_input_features.cpp  opt_solver.cpp  opt_solver.h  random_generators.cpp  random_generators.hpp  rotation_only.cpp  rotation_only.h  sim_corres.cpp  sim_corres.h  solve_5pts.cpp  solve_5pts.h  solve_translate.cpp  solve_translate.h  test_iphone_data.cpp  test_mt_rotation.cpp  test_rotation_only.cpp  translate_factor.cpp  translate_factor.h  translate_pro_factor.cpp  translate_pro_factor.h  utility.cpp  utility.h
(+85 files in other folders)
